# software-inventory-collector

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS
snap/: snapcraft.yaml
software_inventory_collector/: __init__.py  cli.py  collector.py  config.py  exception.py
tests/functional/: conftest.py  test_collector.py
tests/unit/: conftest.py  test_cli.py  test_collector.py  test_config.py
